--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,18 @@ body {
 
 .grid-item {
     border-radius: 0;
-    border: 1px solid black;
     padding: 15px 10px;
-    border: 1px solid grey;
+    border: 1px solid rgba(0, 0, 0, 0.822); 
+}
+
+.orange-bord {
+    border: 1px solid rgb(238, 171, 48);
+    border-top: 1px solid whitesmoke;
+    border-right: 1px solid whitesmoke;
+}
+
+.white-bord {
+    border: 1px solid whitesmoke;
 }
 
 button {
@@ -52,6 +61,7 @@ button:hover {
     background-color: rgba(0, 0, 0, 0.822);
     color: white;
     font-weight: bold;
+    border: 1px solid rgba(0, 0, 0, 0.822);
 }
 
 label {
